# example_package_subfolder

./: README.md
.github/workflows/: pub_pypi.yml  test.yml
compiler/tools/example_package_subfolder/: MANIFEST.in  README.md  noxfile.py  pyproject.toml
compiler/tools/example_package_subfolder/src/example_package_subfolder/: __init__.py  example.py  main.py
compiler/tools/example_package_subfolder/tests/: test_simple.py
